# cmake_project

./: CMakeLists.txt
A/: CMakeLists.txt  preparing.py
B/: CMakeLists.txt  lib.cpp  lib.h
C/: CMakeLists.txt  include.cmake  main.cpp  main_test.cpp  test.cpp
